@@ -1,1 +1,1 @@
-rundll32 ..\bin\debug\visuald.dll RunDLLRegister Software\Microsoft\VisualStudio\9.0D
+rundll32 %0\..\..\bin\debug\visuald.dll RunDLLRegister Software\Microsoft\VisualStudio\9.0D
