@@ -1,0 +1,45 @@
+module testpipe;
+
+int main()
+{
+	simple_D_funcname(0);
+	simple_C_funcname(0);
+	simple_Cpp_funcname(0);
+	simple_Sys_funcname(0);
+	simple_Win_funcname(0);
+	simple_Pas_funcname(0);
+
+	withunicodeD_üüüüüüüüüüü_funcname();
+	withunicodeC_longüüüüüüüüüüülongüüüüüüüüüüülongüüüüüüüüüüülongüüüüüüüüüüülongüüüüüüüüüüülongüüüüüüüüüüülongüüüüüüüüüüülongüüüüüüüüüüülongüüüüüüüüüüülongüüüüüüüüüüü_funcname();
+
+	langC_verylonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong_funcname();
+	langCpp_verylonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong_funcname();
+	langD_verylonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong_funcname();
+	langS_verylonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong_funcname();
+	langW_verylonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong_funcname();
+	langP_verylonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong_funcname();
+
+	dupC_verylonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong_funcname();
+	return 0;
+}
+
+extern(D) void simple_D_funcname(int);
+extern(D) void simple_C_funcname(int);
+extern(C++) void simple_Cpp_funcname(int);
+extern(System) void simple_Sys_funcname(int);
+extern(Windows) void simple_Win_funcname(int);
+extern(Pascal) void simple_Pas_funcname(int);
+
+extern(C) void withunicodeC_longüüüüüüüüüüülongüüüüüüüüüüülongüüüüüüüüüüülongüüüüüüüüüüülongüüüüüüüüüüülongüüüüüüüüüüülongüüüüüüüüüüülongüüüüüüüüüüülongüüüüüüüüüüülongüüüüüüüüüüü_funcname();
+extern(D) void withunicodeD_üüüüüüüüüüü_funcname();
+extern(C) void langC_verylonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong_funcname();
+extern(C++) void langCpp_verylonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong_funcname();
+extern(D) void langD_verylonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong_funcname();
+extern(System) void langS_verylonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong_funcname();
+extern(Windows) void langW_verylonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong_funcname();
+extern(Pascal) void langP_verylonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong_funcname();
+
+extern(C) void dupC_verylonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong_funcname()
+{}
+extern(C) void dupC_verylonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong_funcname(int)
+{}
